# quaestor

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  HISTORY.md  README.md  SMACTORIO_UPGRADE_SIMULATION.md  TODO.md  bandit-results.sarif  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: speckit.constitution.agent.md  speckit.plan.agent.md  speckit.specify.agent.md
.github/prompts/: speckit.constitution.prompt.md
.github/workflows/: ci.yml  security.yml
.specify/memory/: constitution.md  governance-catalog.yaml  state.yaml
.specify/memory/sessions/: 2026-01-14-001.yaml
docs/: QUAESTOR_IMPLEMENTATION_PLAN.md  quaestor_architecture.py
quaestor/: __init__.py  cli.py
quaestor/analysis/: __init__.py  linter.py  models.py  parser.py  pipeline.py  workflow_analyzer.py
quaestor/coverage/: __init__.py  tracker.py
quaestor/evaluation/: __init__.py  judge.py  metrics.py  models.py
quaestor/optimization/: __init__.py  optimizer.py  patterns.py
quaestor/redteam/: __init__.py  adapter.py  config.py  models.py  runner.py
quaestor/reporting/: __init__.py  html.py  sarif.py
quaestor/runtime/: __init__.py  adapters.py  investigator.py  probe_types.py
quaestor/testing/: __init__.py  fixtures.py  models.py  test_designer.py
scripts/: ai_state.py
specs/complete-phase-7-red-team-capabilities/: .workflow-metadata.json  spec.md
specs/create-core-fixture-pydantic-models-for-a-pytest-i/: .workflow-metadata.json  spec.md
specs/create-fixtureregistry-class-for-managing-fixture-/: .workflow-metadata.json  spec.md
specs/create-fixtureresolver-class-for-resolving-fixture/: .workflow-metadata.json  spec.md
specs/create-scopedfixturemanager-class-for-managing-fix/: .workflow-metadata.json  spec.md
specs/implement-coveragetracker-for-multi-dimensional-ag/: .workflow-metadata.json  spec.md
specs/implement-phase-1-core-analysis-engine-python-par/: .workflow-metadata.json  spec.md
specs/implement-phase-1-core-analysis-engine-workflowan/: .workflow-metadata.json  spec.md
specs/implement-quaestorinvestigator-dspy-module-for-mul/: .workflow-metadata.json  spec.md
specs/implement-testcase-and-testsuite-pydantic-models-f/: .workflow-metadata.json  spec.md
specs/implement-testdesigner-dspy-module-for-intelligent/: .workflow-metadata.json  spec.md
tests/: __init__.py  test_adapters.py  test_coverage_tracker.py  test_evaluation_judge.py  test_evaluation_metrics.py  test_evaluation_models.py  test_fixtures.py  test_html.py  test_investigator.py  test_investigator_probing.py  test_linter.py  test_models.py  test_optimizer.py  test_parser.py  test_patterns.py  test_pipeline.py  test_redteam.py  test_sarif.py  test_test_designer.py  test_testing_models.py  test_workflow_analyzer.py
