[project]
name = "quaestor"
version = "0.1.0"
description = "Self-optimizing agentic testing framework - pytest for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Leon Breukelman" }
]
keywords = ["ai", "agents", "testing", "dspy", "evaluation", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Framework - Smactorio provides steering, governance, and agent infrastructure
    "smactorio[agentic] @ git+https://github.com/leonbreukelman/smactorio.git",
    
    # DSPy for reasoning and optimization (also provided by smactorio[agentic])
    "dspy-ai>=2.5.0",
    
    # Evaluation framework
    "deepeval>=2.0.0",
    
    # Data modeling
    "pydantic>=2.0.0",
    
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    
    # Code analysis
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    
    # HTTP client for agent probing
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
# Red team capabilities - ON ROADMAP, deepteam availability TBD
# redteam = [
#     "deepteam>=0.1.0",
# ]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.6.0",
    "smactorio @ git+https://github.com/leonbreukelman/smactorio.git",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
quaestor = "quaestor.cli:app"

[project.urls]
Homepage = "https://github.com/leonbreukelman/quaestor"
Documentation = "https://github.com/leonbreukelman/quaestor#readme"
Repository = "https://github.com/leonbreukelman/quaestor"
Issues = "https://github.com/leonbreukelman/quaestor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["quaestor"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["quaestor"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=quaestor --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["quaestor"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/cli.py",  # CLI implementation pending
    "*/coverage/__init__.py",
    "*/evaluation/__init__.py",
    "*/optimization/__init__.py",
    "*/reporting/__init__.py",
    "*/testing/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85  # Temporarily lowered for Phase 1, will increase to 90% in Phase 2
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
